# research-integrity-review-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CASE_BANK_V0.md  CASE_DISTILLATION_GUIDE.md  CLI_REFERENCE.md  CURVE_SOURCE_RECONCILIATION.md  DOCUMENT_CLAIM_INTAKE.md  EQE_INTEGRATION_CHECKS.md  ETHICS_AND_SCOPE.md  EXCEL_FORMULA_AUDIT.md  GENG_VIDEO_CASE_CARD_SAFETY.md  GENG_VIDEO_DISTILLATION_PROTOCOL.md  GIT_FIRST_CHECKPOINT_GUIDE.md  IMAGE_EVIDENCE_INTAKE.md  IMAGE_SIMILARITY_CANDIDATES.md  JV_CURVE_RECALCULATION.md  MATERIALS_PROCESS_LINEAGE.md  PHOTOVOLTAICS_DOMAIN_PLUGIN.md  PRINCIPLES.md  PV_DECAY_FIT_CHECKS.md  PV_EVIDENCE_RULESET_V1.md  PV_FALSE_POSITIVE_GUIDE.md  PV_REPORTING_CHECKS.md  QUANTIZATION_GRID_REVIEW.md  RAW_PV_FALSE_POSITIVE_GUIDE.md  RAW_PV_RECALCULATION_LAYER.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_READINESS.md  REPORTING_LANGUAGE.md  REPOSITORY_HYGIENE.md  REVIEW_PACKAGE_RUNNER.md  TABLE_SOURCE_DATA_INTAKE.md  UNIFIED_EVIDENCE_INDEX.md  USING_WITHOUT_INSTALLATION.md  p2_p3_p4_release_readiness_summary.md  pv_ruleset_implementation_summary.md
examples/: toy_case.md
integrity_agent/: __init__.py  __main__.py
prompts/: reconcile-cross-document-claims.md  review-a-paper-conservatively.md  review-perovskite-source-data.md
scripts/: distill_local_geng_bilibili_downloads.py
tests/: helpers.py  test_am15g_reference.py  test_batch_intake_cli.py  test_batch_intake_ris_cli.py  test_batch_schema.py  test_batch_summary_report.py  test_batch_summary_snapshot.py  (+138 more)
(+285 files in other folders)
