[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "research-integrity-review-agent"
version = "0.2.0"
description = "Local-first evidence ledger tooling for research integrity review."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Simba"}
]
dependencies = [
  "PyYAML>=6.0",
  "Pillow>=10.0.0",
  "openpyxl>=3.0.0",
  "numpy>=1.24",
  "pydantic>=2.0",
]

[project.scripts]
integrity-agent = "integrity_agent.__main__:main"

[tool.setuptools.packages.find]
include = ["integrity_agent*"]

[tool.setuptools.package-data]
integrity_agent = [
  "core/i18n/locales/*.yml",
  "core/reporting/templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
